# Fast_Lio_For_Windows

./: .gitignore  CMakeLists.txt  COMPLETE_MODIFICATION_GUIDE.md  MODIFICATIONS_CHANGELOG.md  README.md  build_windows_msvc.bat
config/: mid360.yaml  mid360_marsim.yaml
include/: common_lib.h  conversions.h  msg.h
include/compat/: pcl_msvc_compat.h  pthread.h  windows_compat.h
include/ikd-Tree/: ikd_Tree.h
src/: IMU_Processing.hpp  conversions.cpp  data_reader.cpp  data_reader.h  fastlio_bindings.rs  fastlio_bridge.cxx  laserMapping.cpp  laserMapping.h  laserMapping.rs  main.cpp  preprocess.cpp  preprocess.h
